--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.18.2",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "live-server": "^1.2.1",
     "mini-css-extract-plugin": "^0.8.0",
@@ -41,5 +42,10 @@
   },
   "dependencies": {
     "core-js": "^3.4.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test"
+    }
   }
 }
